--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Roger Graves</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -98,7 +98,7 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/jquery/jquery.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
@@ -107,6 +107,25 @@
   <!-- Custom JavaScript for this theme -->
   <script src="js/scrolling-nav.js"></script>
 
+  <script type="text/javascript">
+    $( document ).ready(function() {
+      const $nav = $('.navbar');//Caching element
+
+      // fade in .navbar
+      $(function () {
+        $(window).scroll(function () {
+          // set distance user needs to scroll before we start fadeIn
+          if ($(this).scrollTop() > 300) { //For dynamic effect use $nav.height() instead of '100'
+            $nav.fadeIn();
+          } else {
+            $nav.fadeOut();
+          }
+        });
+      });
+
+    });
+
+  </script>
 </body>
 
 </html>
