Remove nav bar and improve formatting

--- a/index.html
+++ b/index.html
@@ -19,36 +19,39 @@
 </head>
 
 <body id="page-top">
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Roger Graves</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
+  <header id="header">
+    <div class="container text-left">
+      <h1>ROGER GRAVES</h1>
+      <div class="float-right">
+        <a class="js-scroll-trigger scroll-down-pointer" href="#quote-start">
+          <svg class="bi bi-chevron-down" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 01.708 0L8 10.293l5.646-5.647a.5.5 0 01.708.708l-6 6a.5.5 0 01-.708 0l-6-6a.5.5 0 010-.708z" clip-rule="evenodd"/>
+          </svg>
+        </a>
       </div>
-    </div>
-  </nav>
-
-  <header class="bg-primary text-white">
-    <div class="container text-center">
-      <h1>Welcome to Scrolling Nav</h1>
-      <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
+      <p class="lead">Helping software companies build location independent teams.</p>
     </div>
   </header>
+
+  <section id="quote">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="lead">
+            <div class="container" id="quote-start">
+              <div class="row">
+                <div class="col-lg-12 mx-auto">
+                  <p class="inspirational-quote">If you let them, humans have an amazing power to live up to your high expectations of reasonableness and responsibility.</p>
+                  <p class="inspirational-quote-author">David Heinemeier Hansson – Author (Remote: Office Not Required)</p>
+                </div>
+              </div>
+            </div>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <section id="about">
     <div class="container">
@@ -92,7 +95,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Roger Graves 2020</p>
     </div>
     <!-- /.container -->
   </footer>
@@ -107,25 +110,6 @@
   <!-- Custom JavaScript for this theme -->
   <script src="js/scrolling-nav.js"></script>
 
-  <script type="text/javascript">
-    $( document ).ready(function() {
-      const $nav = $('.navbar');//Caching element
-
-      // fade in .navbar
-      $(function () {
-        $(window).scroll(function () {
-          // set distance user needs to scroll before we start fadeIn
-          if ($(this).scrollTop() > 300) { //For dynamic effect use $nav.height() instead of '100'
-            $nav.fadeIn();
-          } else {
-            $nav.fadeOut();
-          }
-        });
-      });
-
-    });
-
-  </script>
 </body>
 
 </html>
